HTML: added a new class. Moved said class out of footer-container and into main. CSS: added corresponding class.

--- a/style.css
+++ b/style.css
@@ -17,7 +17,10 @@
 .logo {
     font: 24px #f9faf8;
 }
-.logo a {}
+
+.logo a {
+
+}
 
 .title-container {
     display: flex;
@@ -29,26 +32,38 @@
 .title-container h1 {
     font: 48px extra-bold #F9FAF8;
 }
+
 .title-container h2 {
     font: 18px #e5e7eb;
 }
-.title-container button {}
 
-img {}
+.title-container button {
+    background-color: #3882f6;
+}
+
+img {
+
+}
 
 .info-container {
 
 }
 
 .hero-section {
-    
+
 }
 
-.text-images-descriptions {}
+.text-images-descriptions {
 
+}
 
+.quote {
 
-.quote {}
+}
+
+.sign-up-container {
+
+}
 
 .footer-container {
 
